testing/tests/ui/ref_deref.stderr
error: failed to parse template source
 --> <source attribute>:1:8
  |
       1 | {% let *x = 2 %}
         |        ^ close to this token
         |
 --> tests/ui/ref_deref.rs:3:10
  |
3 | #[derive(Template)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Template` (in Nightly builds, run with -Z macro-backtrace for more info)
